Added settings activity

--- a/DBSBloboDiary/src/main/res/layout/about.xml
+++ b/DBSBloboDiary/src/main/res/layout/about.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -36,8 +36,8 @@
             android:text="Version: " />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/tvAboutText"
             android:text="@string/text_about"
             android:layout_marginTop="10dp" />
