--- a/DBSBloboDiary/src/main/res/layout/settings.xml
+++ b/DBSBloboDiary/src/main/res/layout/settings.xml
@@ -8,93 +8,133 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SettingsActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Minimum"
-            android:id="@+id/tvSettingsMinimum"
-            android:layout_gravity="left|center_vertical"
-            android:textSize="@dimen/textview_font_size" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/etSettingsMinimum"
-            android:layout_gravity="left|center_vertical"
-            android:numeric="integer"
-            android:inputType="number"
-            android:textSize="@dimen/textview_font_size" />
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView" >
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_gravity="left|center_vertical"
-            android:layout_height="2dip"
-            android:background="#FF525252"
-            ></LinearLayout>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Maximum"
-            android:id="@+id/tvSettingsMaximum"
-            android:layout_gravity="left|center_vertical"
-            android:paddingTop="10dp"
-            android:textSize="@dimen/textview_font_size" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/etSettingsMaximum"
-            android:layout_gravity="left|center_vertical"
-            android:numeric="integer"
-            android:inputType="number"
-            android:textSize="@dimen/textview_font_size" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Minimum"
+                    android:id="@+id/tvSettingsMinimum"
+                    android:layout_gravity="left|center_vertical"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="1"
+                    android:paddingTop="10dp" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_gravity="left|center_vertical"
-            android:layout_height="2dip"
-            android:background="#FF525252"
-            ></LinearLayout>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etSettingsMinimum"
+                    android:layout_gravity="left|center_vertical"
+                    android:numeric="integer"
+                    android:inputType="number"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="0.5" />
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Threshold"
-            android:id="@+id/tvSettingsThreshold"
-            android:layout_gravity="left|center_vertical"
-            android:paddingTop="10dp"
-            android:textSize="@dimen/textview_font_size" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="10dp">
 
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/etSettingsThreshold"
-            android:layout_gravity="left|center_vertical"
-            android:numeric="integer"
-            android:inputType="number"
-            android:textSize="@dimen/textview_font_size" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Maximum"
+                    android:id="@+id/tvSettingsMaximum"
+                    android:layout_gravity="left|center_vertical"
+                    android:paddingTop="10dp"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="1" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etSettingsMaximum"
+                    android:layout_gravity="left|center_vertical"
+                    android:numeric="integer"
+                    android:inputType="number"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="0.5" />
+            </LinearLayout>
 
-            <Button
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="10dp">
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Threshold"
+                    android:id="@+id/tvSettingsThreshold"
+                    android:layout_gravity="left|center_vertical"
+                    android:paddingTop="10dp"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="1" />
+
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etSettingsThreshold"
+                    android:layout_gravity="left|center_vertical"
+                    android:numeric="integer"
+                    android:inputType="number"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="0.5" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Long Squeeze Duration (sec)"
+                    android:id="@+id/tvSettingsLongSqueezeDuration"
+                    android:layout_gravity="left|center_vertical"
+                    android:paddingTop="10dp"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="1" />
+
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/etSettingsLongSqueezeDuration"
+                    android:layout_gravity="left|center_vertical"
+                    android:numeric="integer"
+                    android:inputType="number"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="2" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Save"
-                android:id="@+id/bSettingsSave"
-                android:textSize="@dimen/textview_font_size" />
+                android:layout_gravity="center"
+                android:paddingTop="20dp">
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Save"
+                    android:id="@+id/bSettingsSave"
+                    android:textSize="@dimen/textview_font_size" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
