--- a/DBSBloboDiary/src/main/res/values/dimens.xml
+++ b/DBSBloboDiary/src/main/res/values/dimens.xml
@@ -3,9 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="textview_font_size">22sp</dimen>
+    <dimen name="textview_font_size">20sp</dimen>
 
     <integer name="pressure_max_default_value">24000</integer>
     <integer name="pressure_min_default_value">15000</integer>
     <integer name="pressure_threshold_default_value">22000</integer>
+    <integer name="long_squeeze_duration_default_value">3</integer>
 </resources>
