--- a/DBSBloboDiary/src/main/res/layout/activity_main.xml
+++ b/DBSBloboDiary/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvMainDisplay"
-                android:text="#####" />
+                android:text="@string/no_pressure_value" />
         </LinearLayout>
 
     </FrameLayout>
