--- a/DBSBloboDiary/src/main/res/layout/map_data_list.xml
+++ b/DBSBloboDiary/src/main/res/layout/map_data_list.xml
@@ -1,12 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MapListActivity">
+    android:layout_height="match_parent" >
 
     <TextView
         android:layout_width="fill_parent"
@@ -15,6 +9,8 @@
         android:textSize="@dimen/textview_font_size"
         android:paddingTop="5dip"
         android:paddingBottom="5dip"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
         android:text="TEXT" />
 
 </RelativeLayout>
