--- a/DBSBloboDiary/src/main/res/menu/main.xml
+++ b/DBSBloboDiary/src/main/res/menu/main.xml
@@ -2,12 +2,15 @@
     <item android:id="@+id/menu_connect"
         android:title="@string/menu_connect_blobo"
         android:showAsAction="never" />
-    <item android:id="@+id/menu_show_time_data"
-        android:title="@string/menu_show_time_data"
+    <item android:id="@+id/menu_show_events"
+        android:title="@string/menu_show_events"
         android:showAsAction="never" />
-    <item android:id="@+id/menu_show_map"
-        android:title="@string/menu_show_map"
-        android:showAsAction="never" />
+    <!--<item android:id="@+id/menu_show_time_data"-->
+        <!--android:title="@string/menu_show_time_data"-->
+        <!--android:showAsAction="never" />-->
+    <!--<item android:id="@+id/menu_show_map"-->
+        <!--android:title="@string/menu_show_map"-->
+        <!--android:showAsAction="never" />-->
     <item android:id="@+id/menu_reflection"
         android:title="@string/menu_reflection"
         android:showAsAction="never" />
