--- a/DBSBloboDiary/src/main/res/layout/reflection.xml
+++ b/DBSBloboDiary/src/main/res/layout/reflection.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="View Entries"
+            android:text="@string/reflection_activity_view_entries"
             android:id="@+id/tvViewEntriesText"
             android:layout_gravity="center_horizontal"
             android:textSize="@dimen/textview_font_size"
@@ -45,7 +45,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add an Entry"
+            android:text="@string/reflection_activity_add_entry"
             android:id="@+id/tvAddEntryText"
             android:layout_gravity="center_horizontal"
             android:textSize="@dimen/textview_font_size"
