Completed add/update diary entry

--- a/DBSBloboDiary/src/main/res/layout/add_diary_entry.xml
+++ b/DBSBloboDiary/src/main/res/layout/add_diary_entry.xml
@@ -86,7 +86,11 @@
                 android:id="@+id/tvDiaryLocation"
                 android:layout_gravity="left|center_vertical"
                 android:textSize="@dimen/textview_font_size"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:scrollHorizontally="true"
+                android:marqueeRepeatLimit="1" />
         </LinearLayout>
 
     </LinearLayout>
