--- a/DBSBloboDiary/src/main/res/values/dimens.xml
+++ b/DBSBloboDiary/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
 
     <integer name="pressure_max_default_value">24000</integer>
     <integer name="pressure_min_default_value">15000</integer>
+    <integer name="sensitivity_default_value">200</integer>
     <integer name="pressure_threshold_default_value">22000</integer>
     <integer name="long_squeeze_duration_default_value">3</integer>
 </resources>
