--- a/DBSBloboDiary/src/main/res/layout/settings.xml
+++ b/DBSBloboDiary/src/main/res/layout/settings.xml
@@ -52,7 +52,7 @@
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="Threshold"
+                    android:text="Calibration"
                     android:id="@+id/tvSettingsThreshold"
                     android:layout_gravity="left|center_vertical"
                     android:paddingTop="10dp"
