--- a/DBSBloboDiary/src/main/res/values/colors.xml
+++ b/DBSBloboDiary/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="dbs_blue">#13A4D2</color>
     <color name="light_gray">#dbdbdb</color>
     <color name="gray">#cccccc</color>
+    <color name="pink">#ff69b4</color>>
     <color name="green_1">#07B61E</color>
     <color name="green_2">#1DBC21</color>
     <color name="green_3">#33C224</color>
