--- a/DBSBloboDiary/src/main/res/layout/settings.xml
+++ b/DBSBloboDiary/src/main/res/layout/settings.xml
@@ -19,9 +19,17 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:id="@+id/llSettingsCalTestTopLine"
+                android:background="@color/light_gray"
+                android:layout_height="2dip" />
+
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                android:paddingBottom="20dp">
 
                 <Switch
                     android:layout_width="fill_parent"
@@ -35,6 +43,13 @@
                     android:button="@color/yellow_8"
                     android:checked="false" />
             </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:id="@+id/llSettingsCalTestBottomLine"
+                android:background="@color/light_gray"
+                android:layout_height="2dip" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -122,9 +137,21 @@
                 <Button
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/light_gray"
+                    android:text="Cancel"
+                    android:id="@+id/bSettingsCancel"
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/dbs_blue"
+                    android:textColor="@android:color/white"
                     android:text="Save"
                     android:id="@+id/bSettingsSave"
-                    android:textSize="@dimen/textview_font_size" />
+                    android:textSize="@dimen/textview_font_size"
+                    android:layout_weight="1" />
 
             </LinearLayout>
 
