--- a/DBSBloboDiary/src/main/res/layout/show_pressure.xml
+++ b/DBSBloboDiary/src/main/res/layout/show_pressure.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Date: "
-        android:id="@+id/tvShowTimeDate"
+        android:id="@+id/tvShowPressureTimeDate"
         android:layout_gravity="center_vertical|bottom|left"
         android:textSize="@dimen/textview_font_size"
         android:paddingBottom="10dp" />
@@ -21,24 +19,12 @@
         android:layout_height="fill_parent"
         android:layout_gravity="left|center_vertical"
         android:layout_weight="0.4"
-        android:id="@+id/layoutShowTimeChart"></LinearLayout>
+        android:id="@+id/layoutShowPressureTimeChart"></LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:paddingLeft="60dp"
-        android:paddingRight="60dp">
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="@string/button_show_all_on_map"
-            android:id="@+id/bShowAllOnMap"
-            android:textSize="@dimen/textview_font_size" />
+        android:layout_weight="1" >
     </LinearLayout>
-
 
 </LinearLayout>
