--- a/DBSBloboDiary/src/main/res/menu/show_pressure.xml
+++ b/DBSBloboDiary/src/main/res/menu/show_pressure.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/menu_show_time_line"
+        android:title="@string/menu_show_time_line_from_pressure"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="always" />
 </menu>
